<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WearableApp</string>
    <string name="action_settings">Settings</string>
    <string name="on">Ligar</string>
    <string name="off">Desligar</string>
    <string name="List">Listar dispositivos pareados</string>
    <string name="mqtt">MQTT Connection</string>
    <string name="title_select_device">Selecione um dispositivos para parear</string>
    <string name="title_paired_devices">Dispositivos pareados</string>
    <string name="button_scan">Procurar dispositivos</string>
    <string name="label_no_available_devices">Nenhum dispositivo encontrado</string>
    <string name="title_other_devices">Outros dispositivos disponíveis</string>
    <string name="label_scanning">Procurando...</string>
    <string name="btstatus_not_connected">Status: -</string>
    <string name="title_activity_register_user">Novo Usuário</string>
    <string name="title_activity_login">Login</string>
    <string name="login">Login</string>
    <string name="newUser">Novo Usuário</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_contact_level">ContactLevelActivity</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="logout">Sair</string>
    <string name="new_contact">Novo Contato</string>
    <string name="connect_wearable">Conectar Pulseira</string>
    <string name="user_account">Conta</string>
    <string name="monitor_contact">Monitorar Contato</string>
    <string name="email_hint">E-mail</string>
    <string name="name_hint">Nome</string>
    <string name="password_hint">Senha</string>
    <string name="title_activity_user_level">UserLevelActivity</string>
    <string name="title_activity_bluetooth_test">BluetoothTestActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="delete_account">Apagar conta</string>
    <string name="title_activity_notification">NotificationActivity</string>

    <string name="hello_world">Hello world!</string>

</resources>