<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="org.wearableapp.MenuActivity">

    <item
        android:id="@+id/menu_connect_wearable"
        android:title="@string/connect_wearable"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_monitor_contact"
        android:title="@string/monitor_contact"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_define_user_level"
        android:title="@string/user_account"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_logout"
        android:title="@string/logout"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
